software subsection edit

--- a/BNN_APHY_1.tex
+++ b/BNN_APHY_1.tex
@@ -53,7 +53,7 @@
 				\begin{itemize}
 				    \item A bayesian hierarchical model is one in which the parameterization of coefficient distribution is
 				\end{itemize}
-		\subsection{Logistics}
+		\subsection{Software}
 		    \begin{itemize}
 		        \item Code written in Python
 		        \item Data preparation using pandas, numpy and scikit-learn
