updated validation section

--- a/BNN_APHY_1.tex
+++ b/BNN_APHY_1.tex
@@ -74,9 +74,11 @@
 				\item WAIC
 				\item LOOCV
 			\end{itemize}
-		\subsection{Test Set Validation}
+		\subsection{Test Set Validation And Posterior Predictive Checks}
 			\begin{itemize}
-				\item 
+				\item Test set observed/predicted comparison 
+				\item Fig w/ r2 and mae
+				\item Fig w/ 95\% and 50\% HPD]
 			\end{itemize}
 		\subsection{Posterior Distribution \& Posterior Predictive Checks}
 			\subsubsection{Posterior Distribution of Neural Network Weights}
