updated ppc hunk

--- a/BNN_APHY_1.tex
+++ b/BNN_APHY_1.tex
@@ -80,14 +80,11 @@
 				\item Fig w/ r2 and mae
 				\item Fig w/ 95\% and 50\% HPD]
 			\end{itemize}
-		\subsection{Posterior Distribution \& Posterior Predictive Checks}
-			\subsubsection{Posterior Distribution of Neural Network Weights}
+		\subsection{Posterior Distribution of Weights}
 			\begin{itemize}
-				\item Automati
-			\end{itemize}
-			\subsubsection{Posterior Predictive Checks}
-			\begin{itemize}
-				\item 
+				\item Input unit weights posterior distribution in view of ARD
+				\item Hidden unit weights posterior distribution
+				\item Bias weights posterior distribution
 			\end{itemize}
 	\newpage
 	\section{Discussion}
