--- a/BNN_APHY_1.tex
+++ b/BNN_APHY_1.tex
@@ -36,24 +36,28 @@
 				\item Train/Test Split: While bayesian models are robust to overfitting, the data was nevertheless split into 90\%/10\% training/testing sets, so as to enable possible future comparisons with non-bayesian machine learning implementations. 
 				\item Standardization: 
 				\item Pairwise Relationship: Figure 1 below summarizes the dataset at hand.
-				\begin{figure}[H]
-				    \centering
-				    \includegraphics[scale=0.5]{feature_heatmap_annotated.png}
+			\end{itemize}
+			\begin{figure}[H]
+				\centering
+				\includegraphics[scale=0.5]{feature_heatmap_annotated.png}
 				\caption{Pairwise correlation plot of features and targets. Features are standardized; targets are log-transformed.}
 			\end{figure}
-			\end{itemize}
 		\subsection{Bayesian Neural Network Implementation}
 			\subsubsection{Neural Networks and the Bayesian Paradigm}
 				\begin{itemize}
 					\item Neural Networks as function approximators
 					\item Weights as distributions rather than scalar parameters
-					\item Prior specification
 				\end{itemize}
 			\subsubsection{Model Architecture and the Automatic Relevance Determination (ARD) Framework}
 				\begin{itemize}
 				    \item A bayesian hierarchical model is one in which the parameterization of coefficient distributions are dependent on an overarching distribution [include kruschke figure?]
 				    \item A bayesian neural network with ARD is one where the variance of the distributions of the weights comming out of each input unit is controlled by a hierarchical distribution. This allows uncovering how relevant each feature is in predicting the target.
+					\item Prior specification
 				\end{itemize}
+				\begin{figure}
+				    \centering
+				    \includegraphics[scale=0.4]{bnn_l2_4_4_robust.pdf}
+				\end{figure}
 		\subsection{Data and Software Access, and Reproducibility}
 		    \begin{itemize}
 		        \item Code written in Python
